src/test/ui/issues/issue-14092.stderr
error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/issue-14092.rs:1:11
   |
LL | fn fn1(0: Box) {}
   |           ^^^ expected 1 type argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
